--- a/Mod_Exer/S16_Ejercicio/index.html
+++ b/Mod_Exer/S16_Ejercicio/index.html
@@ -22,8 +22,7 @@
             <p class="parrafo" draggable="true" id="parrafo-7">7. Septimo</p>
             <p class="parrafo" draggable="true" id="parrafo-8">8. Octavo</p>
         </div>
-        <div class="paperbin">
-            <img class="img-paperbin" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSSMWeEC0tULzOjfWFAOdOHjUw9WjXhBDbirg&usqp=CAU" width="50" height="50"/>
+            <img class="papelera" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSSMWeEC0tULzOjfWFAOdOHjUw9WjXhBDbirg&usqp=CAU"/>
         </div>
     </div>
 </body>
